17.oct (lv)
      - fix #7504: test XML files crashing during playback
16.oct (ws)
      - fix #7538: edit text style dlg box: only changes to title are accepted
15.oct (ws)
      - stronger typing for BarLineType
      - fix #7497: adding parentheses to notes causes crash
      (lv)
      - #5637 support reading bww files: updated testfiles
14.oct (la)
      - fix #7520: Undo reorder instruments does not work as expected
      - fix #7519: Moving instrument causes crash
      (ws)
      - sync bar line changes with parts
      - sync key signature changes with parts
13.oct (ws)
      - replace clef number with clef name in msc[xz] files
      - stronger typing with ClefType
12.oct (ws)
      - fix #7479: png resolution preference ignored; command line option
        now overrides preference setting
      - fix #7468: Note change in part not updated in full score if in note
        entry mode
      (db)
      - Update mixer after Create > Instruments dialog (see #6505)
11.oct (ws)
      - fix #7461: appstyle-dark.css makes no distinction between active
        and disabled buttons
      - fix #7447: Lyrics deleted when changing note
10.oct (ws)
      - improved capella import
      (db)
      - fix local handbook disabled when no file is open
      - fix #7425: Space bar for play/pause (and zero for rests)
      - correct stem lengths for multi-flag notes (see bug #7415)
      - update Fingering and Lines menu windows to match their palettes
8.oct (ws)
      - fix #7416: triplet causes crash
      - fix #7418: crash when delete soundfont while playing
      - fix #1395: Accidental after a tied note
      - fix #7415: stems too short for 32th and 64th notes
6.oct (ws)
      - fix #7403: double note duration (W) changes pitch
      - remove unused "system" text styles
      - remove page number text styles
      - replace text style number by text style name in .msc[xz] files to
        make text styles more easily extendable